springboot-microservice-advanced/notification-fetcher.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notification-fetcher
  namespace: mddz
spec:
  selector:
    matchLabels:
      app: notification-fetcher
  replicas: 1
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "false"
      labels:
        app: notification-fetcher
    spec:
      volumes:
        - name: notification-fetcher-logs
          persistentVolumeClaim:
            claimName: notification-fetcher-logs-claim
      securityContext:
        runAsUser: 10000
        runAsGroup: 10001
      imagePullSecrets:
        - name: my-reg-key
      containers:
      - name: notification-fetcher
        image: registry.code.***.com/mddz/notification-fetcher:1.0.0-SNAPSHOT
        securityContext:
          allowPrivilegeEscalation: false
        ports:
        - containerPort: 8082
        imagePullPolicy: Always
        resources:
          requests:
            cpu: 80m
            memory: 150Mi
          limits:
            cpu: 160m
            memory: 300Mi
        volumeMounts:
          - name: notification-fetcher-logs
            mountPath: /home/mddz/logs/notification-fetcher/${INSTANCE}          
---
apiVersion: v1
kind: Service
metadata:
  name: notification-fetcher-service
  namespace: mddz
spec:
  type: ClusterIP
  selector:
    app: notification-fetcher
  ports:
  - protocol: TCP
    port: 8082
    targetPort: 8082
